Update ML_Support Vector Machines.ipynb

--- a/ML_Support Vector Machines.ipynb
+++ b/ML_Support Vector Machines.ipynb
@@ -644,7 +644,7 @@
     "\n",
     "In fact, we did attempt to pursue hyperparameter tuning, starting from the kernels that were the most time-efficient in our cases (polynomial and sigmoid) and keeping the parameter variables as generalised as possible, ie. instead of 1 to 100 in intervals of 1, 1 to 100 in intervals of 10. However, even after 24 hours, there was to be no output, which made our team question the viability of this model for the classification problem, and further explore other models.\n",
     "\n",
-    "We learnt that SVMs are in fact effective for small training datasets, datasets where number of dimensions are greater than the number of samples and small datasets in general. SVMs are known as low-complexity models which work well with small datasets. \n",
+    "We learnt that SVMs are in fact effective for small training datasets, datasets where number of dimensions are greater than the number of samples and small datasets in general. SVMs are known as low-complexity models which work well with small datasets. Moreover, SVMs are natively binary classifiers, which may also explain the performance of some of the kernels.\n",
     "\n",
     "Datasets with more noise will decrease SVMs performance as well.\n",
     "\n",
