--- a/ML_K nearest Neighbors.ipynb
+++ b/ML_K nearest Neighbors.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "6a3f93ac",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,7 @@
     "from sklearn.metrics import f1_score\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "import seaborn as sb\n",
     "sb.set() #Set the default seaborn style for graphics\n",
     "import random\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a3eea80",
+   "id": "9c754c21",
    "metadata": {},
    "source": [
     "> With the use of a training set that has clearly labelled the category each entry belongs to (under 'Salary'), we can see that **k-nearest neighbors is a Supervised Learning Algorithm**."
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9462d19",
+   "id": "c4b8032a",
    "metadata": {},
    "source": [
     "### 3a. Using regular data"
@@ -117,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1b623871",
+   "id": "c61760fc",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf1c55f",
+   "id": "ffbd72c2",
    "metadata": {},
    "source": [
     "> We note that the the model has performed decently on both train and test sets, with the model performing better on the train set as visible from the confusion matrices and classification report. Performance patterns seem to be similar between the train and test sets."
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970f5103",
+   "id": "a6c27437",
    "metadata": {},
    "source": [
     "### 3b. Using feature engineered data"
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccf1da2",
+   "id": "52484a3b",
    "metadata": {},
    "source": [
     "---\n",
@@ -650,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb8f182a",
+   "id": "7dd2d793",
    "metadata": {},
    "source": [
     "---\n",
@@ -749,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ee7cb84",
+   "id": "929c9af0",
    "metadata": {},
    "source": [
     "> The optimal performance result of KNeighborsClassifier() for our dataset is found to be at F1-score of 0.519702, at parameter *n_neighbors* = 48."
@@ -757,7 +758,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe90b97",
+   "id": "660afcfb",
+   "metadata": {},
+   "source": [
+    "##### Note on feature importance:\n",
+    "\n",
+    "We note the inability to perform feature importance analysis as K-nearest Neighbors does not provide a prediction for the importance or coefficients of variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36bb349e",
    "metadata": {},
    "source": [
     "---\n",
@@ -1019,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f5db0b28",
+   "id": "6bb02bb4",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "42065bea",
+   "id": "0301390c",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd098280",
+   "id": "4f161b93",
    "metadata": {},
    "source": [
     "> While there is improvement in performance on the train data, there is no improvement in performance on the test data by using the feature engineered data."
@@ -1103,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56cec5ed",
+   "id": "d11c381d",
    "metadata": {},
    "source": [
     "Under the k-nearest neighbors algorithm, there is **no visible improvement in performance from applying the feature engineered data**."
@@ -1112,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82f90db",
+   "id": "aca1d5a9",
    "metadata": {},
    "outputs": [],
    "source": []
