--- a/ML_Logistic Regression.ipynb
+++ b/ML_Logistic Regression.ipynb
@@ -6,6 +6,12 @@
    "metadata": {},
    "source": [
     "# Logistic Regression approach\n",
+    "\n",
+    "Logistic Regression is a supervised classification algorithm. It performs its task of predictive analysis by predicting whether or not a given data entry belongs to a said category. In our multi-class problem, we will be implementing multinomial logistic regression, an extension of logistic regression that adds native support for multi-class classification problems.\n",
+    "\n",
+    "*ref: https://machinelearningmastery.com/multinomial-logistic-regression-with-python/ , \n",
+    "https://www.geeksforgeeks.org/understanding-logistic-regression/*\n",
+    "\n",
     "## 1. Import the packages"
    ]
   },
@@ -67,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f84886",
+   "id": "00b674e6",
    "metadata": {},
    "source": [
     "> With the use of a training set that has clearly labelled the category each entry belongs to (under 'Salary'), we can see that **Logistic Regression is a Supervised Learning Algorithm**."
@@ -75,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7724b354",
+   "id": "85dd1ef8",
    "metadata": {},
    "source": [
     "---\n",
@@ -95,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed7d796",
+   "id": "e3826113",
    "metadata": {},
    "source": [
     "#### 3.1a Using regular data"
@@ -151,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b4299546",
+   "id": "bc899cfe",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d244ad",
+   "id": "76acd7f4",
    "metadata": {},
    "source": [
     "> We note that the lbfgs solver has performed decently on both train and test sets, with the solver having similar performance on both train and test sets as observed from the confusion matrices and the classification report."
@@ -236,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1ba787",
+   "id": "af0977e2",
    "metadata": {},
    "source": [
     "#### 3.1b Using feature engineered data"
@@ -335,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc53759",
+   "id": "427ff197",
    "metadata": {},
    "source": [
     "> We note that the lbfgs solver has performed decently on both train and test sets. Performance pattern between the train and test sets are similar. There is notably no improvement (in fact, a slight decrease) in performance when implementing with the feature engineered data instead."
@@ -343,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dae0b6d",
+   "id": "231d1ea7",
    "metadata": {},
    "source": [
     "### 3.2 Newton-CG solver"
@@ -391,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21d7679d",
+   "id": "d6b42a5e",
    "metadata": {},
    "source": [
     "### 3.3 SAG solver"
@@ -399,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca76fb58",
+   "id": "be95961f",
    "metadata": {},
    "source": [
     "#### 3.3a Using regular data"
@@ -525,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398a157f",
+   "id": "3b3b35ab",
    "metadata": {},
    "source": [
     "> We note that the SAG solver has performed decently on both train and test sets. Performance patterns seem to be similar between the train and test sets."
@@ -533,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e50b2408",
+   "id": "61031871",
    "metadata": {},
    "source": [
     "#### 3.3b Using feature engineered data"
@@ -632,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f4e1484",
+   "id": "5848d4da",
    "metadata": {},
    "source": [
     "> We note that the SAG solver has performed decently on both train and test sets. Performance pattern between the train and test sets are similar. There is notably no improvement (in fact, a slight decrease) in performance when implementing with the feature engineered data instead."
@@ -640,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e39293",
+   "id": "621e748d",
    "metadata": {},
    "source": [
     "### 3.4 SAGA solver"
@@ -648,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d851d4",
+   "id": "304754b5",
    "metadata": {},
    "source": [
     "#### 3.4a Using regular data"
@@ -774,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa008b9",
+   "id": "2c1ab8e0",
    "metadata": {},
    "source": [
     "> We note that the SAGA solver has performed decently on both train and test sets. Performance patterns seem to be similar between the train and test sets."
@@ -782,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d3b1b07",
+   "id": "61888d5d",
    "metadata": {},
    "source": [
     "#### 3.4b Using feature engineered data"
@@ -881,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f51ae526",
+   "id": "64a074b6",
    "metadata": {},
    "source": [
     "> We note that the SAGA solver has performed decently on both train and test sets. Performance pattern between the train and test sets are similar. There is notably no improvement (in fact, a decrease) in performance when implementing with the feature engineered data instead."
@@ -889,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1fc6cd0",
+   "id": "a1e89ebf",
    "metadata": {},
    "source": [
     "### 3.5 A Library for Large Linear Classification (liblinear) solver"
@@ -897,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01dfc45b",
+   "id": "9b733be7",
    "metadata": {},
    "source": [
     "#### 3.5a Using regular data"
@@ -997,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b25ac9cb",
+   "id": "4836268e",
    "metadata": {},
    "source": [
     "> We note that the liblinear solver has performed decently on both train and test sets. Performance patterns seem to be similar between the train and test sets."
@@ -1005,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b509920",
+   "id": "b1cbb3e2",
    "metadata": {},
    "source": [
     "#### 3.5b Using feature engineered data"
@@ -1104,7 +1110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dab0d8f",
+   "id": "115dd2e4",
    "metadata": {},
    "source": [
     "> We note that the liblinear solver has performed decently on both train and test sets. Performance pattern between the train and test sets are similar. There is notably no improvement (in fact, a slight decrease) in performance when implementing with the feature engineered data instead."
@@ -1112,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f7b44c3",
+   "id": "47c37cb2",
    "metadata": {},
    "source": [
     "Therefore, we have taken a look at the following solvers: lbfgs, newton-cg, sag, saga and liblinear. Aside from newton-cg, we observe that across all 4, the **use of the feature engineered data did not help improve performance**, instead leading to a decrement in performance in terms of F-1 score. It was also observed that the **solvers generally performed similarly on both the train and test data**, a positive step forward from the observations made in the SVMs attempt. **The *max_iter* parameter also has to be fulfilled with a sufficiently large value** as well, in most cases greater than 1000."
@@ -1417,7 +1423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213c9e80",
+   "id": "425a2754",
    "metadata": {},
    "source": [
     "##### 1st iteration"
@@ -1476,7 +1482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80278320",
+   "id": "163d7709",
    "metadata": {},
    "source": [
     "##### 2nd iteration"
@@ -1535,7 +1541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81149f9a",
+   "id": "a582ed02",
    "metadata": {},
    "source": [
     "##### 3rd iteration"
@@ -1594,7 +1600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40b02a78",
+   "id": "c72fe7aa",
    "metadata": {},
    "source": [
     "It is clear that across the 3 iterations, where we have incremented the *cv* parameter by 1 in each run, there is an **agreement on the optimal *solver* and *penalty* to be liblinear and l1**. Noting a lack of agreement on the *C* parameter's optimal value, we will implement a for loop to find the optimal value."
@@ -1602,7 +1608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b33d4cd",
+   "id": "77123f28",
    "metadata": {},
    "source": [
     "### 4.3 Further tuning with for loop\n",
@@ -1749,7 +1755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "061e80b1",
+   "id": "b9ee6c95",
    "metadata": {},
    "source": [
     "> Under the above conditions which were agreed upon during the 3 iterations of RandomizedSearchCV, we find the optimal *C* parameter value to be 3."
@@ -1757,7 +1763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f79413",
+   "id": "8f4ed8ca",
    "metadata": {},
    "source": [
     "---\n",
@@ -1858,7 +1864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2763134e",
+   "id": "bb52b5c5",
    "metadata": {},
    "source": [
     "> The optimal performance result of LogisticRegression() for our dataset is found to be at F1-score of 0.512655, at parameters *solver* = 'liblinear', *max_iter* = 10000, *penalty* = 'l1', *C* = 3.\n",
@@ -1869,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "811d24dd",
+   "id": "ea4244d0",
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c03971d",
+   "id": "0d3c0a22",
    "metadata": {},
    "source": [
     "> We can see that the 3 most important features as identified by this logistic regression model appear to be, in order of importance, 'Pro_Cert', 'Cert_Need' and 'Sex'. The 3 least important starting from the least would be 'Less than 35hrs for at least 1 week', 'Occupation Group' and 'Disability'."
@@ -1938,7 +1944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7476f6",
+   "id": "3ded6ad3",
    "metadata": {},
    "source": [
     "---\n",
@@ -1949,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "dc2a4e7d",
+   "id": "d6e0519f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59dcb71b",
+   "id": "13288598",
    "metadata": {},
    "source": [
     "##### 1st iteration"
@@ -1969,7 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "85cad72c",
+   "id": "8eec4bd4",
    "metadata": {
     "scrolled": false
    },
@@ -2019,7 +2025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fdfd3c5",
+   "id": "4ccfddf3",
    "metadata": {},
    "source": [
     "##### 2nd iteration"
@@ -2028,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "cf32a769",
+   "id": "5b925cb7",
    "metadata": {
     "scrolled": false
    },
@@ -2078,7 +2084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcebca07",
+   "id": "fff03255",
    "metadata": {},
    "source": [
     "##### 3rd iteration"
@@ -2087,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4634e846",
+   "id": "1115ba31",
    "metadata": {
     "scrolled": false
    },
@@ -2137,7 +2143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207cd960",
+   "id": "4bf9bd9c",
    "metadata": {},
    "source": [
     "> Once again, after 3 iterations of RandomizedSearchCV, we observe an agreement across the same 2 parameters, with no agreement on the optimal *C* value. We then proceed to arrow in on the *C* parameter through a for loop."
@@ -2146,7 +2152,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "1a8982a2",
+   "id": "85aaf6d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2165,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "cb816466",
+   "id": "ab028326",
    "metadata": {},
    "outputs": [
     {
@@ -2285,7 +2291,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d3cf4b63",
+   "id": "62ce631f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,7 +2303,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "414fa5c5",
+   "id": "86670a63",
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2361,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "47afeff0",
+   "id": "e858ccd9",
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93896e6",
+   "id": "65c5f87b",
    "metadata": {},
    "source": [
     "> After hyperparameter tuning, we do not observe any better performance from the use of the feature engineered data as compared to regular data. It seems that feature engineering does not help in this model."
@@ -2382,7 +2388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa8a52d",
+   "id": "7e718e9d",
    "metadata": {},
    "source": [
     "Under the Logistic Regression, there is **no visible improvement in performance from applying the feature engineered data**."
@@ -2391,7 +2397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfc3c941",
+   "id": "92f001c0",
    "metadata": {},
    "outputs": [],
    "source": []
