--- a/ML_K nearest Neighbors.ipynb
+++ b/ML_K nearest Neighbors.ipynb
@@ -5,7 +5,11 @@
    "id": "c598fdcb",
    "metadata": {},
    "source": [
-    "# K-nearest Neighbors approach"
+    "# K-nearest Neighbors approach\n",
+    "\n",
+    "The K-nearest Neighbors algorithm is a supervised machine learning algorithm that assumes similar things are in close proximity of each other. Like how birds of a feather flock together, in the case that it finds a datapoint is near to another datapoint, it assumes that they both belong to similar classes. A strong advantage of the KNN approach is that it is applicable to multiclass classification problems.\n",
+    "\n",
+    "ref: https://towardsdatascience.com/machine-learning-basics-with-the-k-nearest-neighbors-algorithm-6a6e71d01761 , https://towardsdatascience.com/multiclass-classification-using-k-nearest-neighbours-ca5281a9ef76"
    ]
   },
   {
@@ -78,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c754c21",
+   "id": "10318128",
    "metadata": {},
    "source": [
     "> With the use of a training set that has clearly labelled the category each entry belongs to (under 'Salary'), we can see that **k-nearest neighbors is a Supervised Learning Algorithm**."
@@ -97,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b8032a",
+   "id": "087ce60d",
    "metadata": {},
    "source": [
     "### 3a. Using regular data"
@@ -118,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c61760fc",
+   "id": "931efa43",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffbd72c2",
+   "id": "6d2105ab",
    "metadata": {},
    "source": [
     "> We note that the the model has performed decently on both train and test sets, with the model performing better on the train set as visible from the confusion matrices and classification report. Performance patterns seem to be similar between the train and test sets."
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c27437",
+   "id": "a99c6d78",
    "metadata": {},
    "source": [
     "### 3b. Using feature engineered data"
@@ -307,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52484a3b",
+   "id": "e1b38d6b",
    "metadata": {},
    "source": [
     "---\n",
@@ -651,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dd2d793",
+   "id": "cd54ba10",
    "metadata": {},
    "source": [
     "---\n",
@@ -750,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929c9af0",
+   "id": "b70a0786",
    "metadata": {},
    "source": [
     "> The optimal performance result of KNeighborsClassifier() for our dataset is found to be at F1-score of 0.519702, at parameter *n_neighbors* = 48."
@@ -758,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660afcfb",
+   "id": "7e9f680f",
    "metadata": {},
    "source": [
     "##### Note on feature importance:\n",
@@ -768,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36bb349e",
+   "id": "88b5dd6d",
    "metadata": {},
    "source": [
     "---\n",
@@ -1030,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6bb02bb4",
+   "id": "2e3d1ccb",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0301390c",
+   "id": "e8ba20ff",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f161b93",
+   "id": "8061e96a",
    "metadata": {},
    "source": [
     "> While there is improvement in performance on the train data, there is no improvement in performance on the test data by using the feature engineered data."
@@ -1114,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11c381d",
+   "id": "9ca00c4e",
    "metadata": {},
    "source": [
     "Under the k-nearest neighbors algorithm, there is **no visible improvement in performance from applying the feature engineered data**."
@@ -1123,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca1d5a9",
+   "id": "32afe902",
    "metadata": {},
    "outputs": [],
    "source": []
