--- a/ML_Support Vector Machines.ipynb
+++ b/ML_Support Vector Machines.ipynb
@@ -6,12 +6,19 @@
    "metadata": {},
    "source": [
     "# Support Vector Machines approach\n",
+    "\n",
+    "Support Vector Machines algorithm is a supervised machine learning algorithm that supports classification problems. It does so by attempting to drive a separation boundary as cleanly as possible between data points in hopes of accurately classifying the data according to the categories specified.\n",
+    "\n",
+    "To generalize, the objective is to find a hyperplane that maximizes the separation of the data points to their potential classes in an n-dimensional space. The data points with the minimum distance to the hyperplane (closest points) are called Support Vectors.\n",
+    "\n",
+    "ref: https://www.baeldung.com/cs/svm-multiclass-classification\n",
+    "\n",
     "## 1. Import the packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "7af3de73",
    "metadata": {},
    "outputs": [],
@@ -25,6 +32,7 @@
     "import seaborn as sb\n",
     "sb.set() #Set the default seaborn style for graphics\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "import random\n",
     "np.random.seed(42)"
@@ -141,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0e5385e6",
+   "id": "ac335cc9",
    "metadata": {
     "scrolled": false
    },
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e5721a1",
+   "id": "17f8dd2e",
    "metadata": {},
    "source": [
     "> We are able to observe from the confusion matrix that that the **rbf kernel notably performs extremely well in training**, but **does not do well at all on the test set**, incorrectly predicting almost all the entries under a single category '3'. This leads to a very poor F1-score."
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb5f988",
+   "id": "98de1540",
    "metadata": {},
    "source": [
     "#### 3.1b Using feature-engineered data"
@@ -239,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8d39a9eb",
+   "id": "832f119b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b70fbb3b",
+   "id": "0b635961",
    "metadata": {
     "scrolled": false
    },
@@ -309,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "08a43c7d",
+   "id": "8077befc",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c802a2d2",
+   "id": "e8d2c10e",
    "metadata": {},
    "source": [
     "> We are able to observe from the confusion matrix that that the **rbf kernel notably performs extremely well in training**, and did significantly better with the test set. \n",
@@ -441,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1fc01d9",
+   "id": "27ccde14",
    "metadata": {},
    "source": [
     "> We are able to observe from the confusion matrix that that the **polynomial kernel performs very similarly on both the train and test sets**, incorrectly predicting most of the entries under a single category '4' in both cases. This leads to a very poor F1-score."
@@ -449,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6184b4b2",
+   "id": "c74d5e93",
    "metadata": {},
    "source": [
     "#### 3.2b Using feature-engineered data"
@@ -458,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1e802b23",
+   "id": "c382ba1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9a7ab449",
+   "id": "e4aa22f5",
    "metadata": {
     "scrolled": false
    },
@@ -546,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3607b2a2",
+   "id": "1b221fa2",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12bc380a",
+   "id": "85fda488",
    "metadata": {},
    "source": [
     "> We are able to observe from the confusion matrix that that the **polynomial kernel performs very similarly on both the train and test sets**, incorrectly predicting most of the entries under a single category '4' in both cases. This leads to a very poor F1-score. \n",
@@ -680,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03dd08b",
+   "id": "b019a9a5",
    "metadata": {},
    "source": [
     "> We are able to observe from the confusion matrix that that the **sigmoid kernel performs very similarly on both the train and test sets**, incorrectly predicting most the entries under the categories '2' and '3' in both cases. This leads to a very poor F1-score."
@@ -688,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddb47322",
+   "id": "e94b4599",
    "metadata": {},
    "source": [
     "#### 3.3b Using feature-engineered data"
@@ -697,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "63d431da",
+   "id": "944a17b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b2d2b612",
+   "id": "65d613cc",
    "metadata": {
     "scrolled": false
    },
@@ -767,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4fb2ce28",
+   "id": "9e88292e",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9416e7f",
+   "id": "3cbe0765",
    "metadata": {},
    "source": [
     "> We are able to observe from the confusion matrix that that the **sigmoid kernel performs very similarly on both the train and test sets**, incorrectly predicting most the entries under the categories '1' and '2' in both cases. This leads to a very poor F1-score.\n",
@@ -839,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e94ebd92",
+   "id": "af9324ba",
    "metadata": {},
    "source": [
     "##### On the use of Support Vector Machines for our classification problem:\n",
@@ -854,14 +862,6 @@
     "##### On the implementation of feature engineering to improve performance:\n",
     "It is inconclusive overall across the kernels as to whether feature engineering is able to provide better performance across the board. However, there is strong evidence that it is able to do so at least in the context of the rbf kernel, as observed in the stark differences between the confusion matrices during test."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "629834d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
