--- a/ML_AdaBoost_AdaptiveBoosting.ipynb
+++ b/ML_AdaBoost_AdaptiveBoosting.ipynb
@@ -1468,7 +1468,7 @@
     "<br>\n",
     "<li>Optimal Features-> After we tuned our model, we found the most relevant features to our model and thus the most consequential features affecting a person’s salary: the industry they are working in (most significant), the occupation they are working in, the person’s age. Some features were a little less relevant to determine one’s salary: whether you are an army veteran(least significant) and whether you have a government-issued Professional Certificate</li>\n",
     "<br>\n",
-    "<li>Checking for Overfitting: After tuning, both the training and test set accuracy do not have much of a difference in f1-scores as compared to other ML models, and thus this means that there was overfitting of data in this model. </li>\n",
+    "<li>Checking for Overfitting: After tuning, both the training and test set accuracy do not have much of a difference in f1-scores as compared to other ML models, and thus this means that there was no overfitting of data in this model. </li>\n",
     "<br>\n",
     "<li>Overall Model Evaluation-> The AdaBoost Classifier does in fact perform much better than the Decision Tree but has a slightly lower f-1 accuracy score than some other ML models we implemented. Thus, due to the fact that the model might not be as accurate as the other tree-based models we used, we can conclude that this is not the best ML model that we have implemented to solve our defined problem as to what determines a person’s income. </li>\n",
     "</ol>  \n"
