--- a/ML_CatBoostClassifier.ipynb
+++ b/ML_CatBoostClassifier.ipynb
@@ -6012,11 +6012,11 @@
     "<br>\n",
     "<li>Feature Engineering-> Initially the feature engineered dataset performed worse than our regular dataset on the base CatBoost Model, however after tuning our model, we were able to close the gap in terms of accuracy. After tunning, the feature engineered dataset performed just as well as as our regular dataset in terms of accuracy with the f-1 score</li>\n",
     "<br>\n",
-    "<li>Optimal Features-> After we tuned our model, we found the most relevant features to our model and thus the most consequential features affecting a person’s salary: the industry they are working in (most significant), the level of education they have attained, their citizen status and lastly the person’s age. Some features were a little less relevant to determine one’s salary: Whether you work less than 35 hours a week (most significant), whether you have a government-issued Professional Certificate and whether you are an army veteran</li>\n",
+    "<li>Optimal Features-> After we tuned our model, we found the most relevant features to our model and thus the most consequential features affecting a person’s salary: the industry they are working in (most significant), the level of education they have attained, their citizen status and lastly the person’s age. Some features were a little less relevant to determine one’s salary: Whether you work less than 35 hours a week (least significant), whether you have a government-issued Professional Certificate and whether you are an army veteran</li>\n",
     "<br>\n",
     "<li>Checking for Overfitting-> After tuning, both the training and test set accuracy are still quite comparable, much closer in f1-scores than other ML models, and this is one of the key benefits of using the CatBoost model as it is specially designed to prevent overfitting of data. Thus there was no overfitting with the model.</li>\n",
     "<br>\n",
-    "<li>Overall Model Evaluation-> The CatBoost Classifier does in fact perform much better than the Decision Tree and some other ML models we implemented as seen by the differences in the F1-scores across them. We can conclude that this is the best performing ML model that we have implemented to solve our defined problem as to what determines a person’s income.</li>\n",
+    "<li>Overall Model Evaluation-> The CatBoost Classifier does in fact perform much better than the Decision Tree and some other ML models we implemented as seen by the differences in the F1-scores across them. We can conclude that this is the 2nd best performing ML model that we have implemented to solve our defined problem as to what determines a person’s income.</li>\n",
     "</ol>  "
    ]
   },
