--- a/ML_K nearest Neighbors.ipynb
+++ b/ML_K nearest Neighbors.ipynb
@@ -201,7 +201,7 @@
    "id": "6d2105ab",
    "metadata": {},
    "source": [
-    "> We note that the the model has performed decently on both train and test sets, with the model performing better on the train set as visible from the confusion matrices and classification report. Performance patterns seem to be similar between the train and test sets."
+    "> We note that the the model has performed decently on both train and test sets, with the model performing better on the train set as visible from the confusion matrices and classification report. Performance patterns seem to be similar between the train and test sets. Also, there seems to be an issue of **overfitting**."
    ]
   },
   {
@@ -306,7 +306,7 @@
    "id": "185319c9",
    "metadata": {},
    "source": [
-    "> We note that the model has performed decently on both train and test sets, with the model performing better on the train set as visible from the confusion matrices and classification report. Performance pattern between the train and test sets are similar. There is notably no improvement (in fact, a slight decrease) in performance when implementing with the feature engineered data instead."
+    "> We note that the model has performed decently on both train and test sets, with the model performing better on the train set as visible from the confusion matrices and classification report. Performance pattern between the train and test sets are similar. There is notably no improvement (in fact, a slight decrease) in performance when implementing with the feature engineered data instead. Also, there seems to be an issue of **overfitting**."
    ]
   },
   {
@@ -757,7 +757,7 @@
    "id": "b70a0786",
    "metadata": {},
    "source": [
-    "> The optimal performance result of KNeighborsClassifier() for our dataset is found to be at F1-score of 0.519702, at parameter *n_neighbors* = 48."
+    "> The optimal performance result of KNeighborsClassifier() for our dataset is found to be at F1-score of 0.519702, at parameter *n_neighbors* = 48. It also appears that after hyperparameter tuning, the **issue of overfitting has been resolved** with a far smaller gap between performance of the train and test sets."
    ]
   },
   {
